--- a/client/styles/AdditionalProductsByProductLine.css
+++ b/client/styles/AdditionalProductsByProductLine.css
@@ -93,3 +93,14 @@
   float: left;
   width: 20%;
 }
+
+.linkContainer {
+  text-align: right;
+  font-size: 13px;
+  padding-top: 10px;
+}
+
+.link {
+  color: #3399FD;
+  text-decoration: underline;
+}
