--- a/client/styles/AdditionalProductsByType.css
+++ b/client/styles/AdditionalProductsByType.css
@@ -1,3 +1,9 @@
+
+.noDecoration {
+  text-decoration: none;
+  color: black;
+}
+
 .container {
   -webkit-font-smoothing: antialiased !important;
   -moz-osx-font-smoothing: grayscale;
@@ -34,6 +40,10 @@
   width: 150px;
   margin: 0 10px;
   transition: left .3s,top .3s ease;
+}
+
+.product:hover > .noDecoration {
+  text-decoration: underline;
 }
 
 .image {
